<resources>
    <string name="app_name">GharTakShiksha</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="mobile_no_is_only_used_for_verification_purpose">Mobile no is only used for verification purpose</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="otp">OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_your_details_for_signup">Add your details for signup</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="profile">Profile</string>
    <string name="_class">Class</string>
    <string name="update_class_subject"><![CDATA[Update Class & Subject]]></string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
</resources>