<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/colorOne"
                    android:fontFamily="sans-serif"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textSize="@dimen/text_regular"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorThree" />

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/enter_mobile_number"
                        android:paddingStart="10dp"
                        android:textSize="@dimen/text_regular"
                        android:paddingEnd="10dp"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorThree"
                        android:textColorHint="@color/colorLightGray"
                        android:background="@drawable/bg_edittext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/text_regular"
                        android:textColor="@color/colorThree" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:hint="@string/enter_your_password"
                        android:paddingStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/text_regular"
                        android:paddingEnd="10dp"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:textColor="@color/colorThree"
                        android:textColorHint="@color/colorLightGray"
                        android:background="@drawable/bg_edittext"/>

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_button_primary"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvForgotYourPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/colorThree" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/colorThree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/signup"
            android:textColor="@color/colorOne" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>