<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_navigation_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorOne"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_details_for_signup"
            android:textAlignment="center"
            android:textColor="@color/colorFour" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/mobile_number"
                        android:textColor="@color/colorThree"
                        android:textSize="@dimen/text_regular" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <TextView
                            android:id="@+id/tvCountryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="+91"
                            android:textColor="@color/colorThree"
                            android:theme="@style/SpinnerTheme" />

                        <EditText
                            android:id="@+id/etMobileNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorTransparent"
                            android:hint="@string/enter_mobile_number"
                            android:textColor="@color/colorThree"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="@dimen/text_regular" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnGetOTP"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/bg_button_primary"
                            android:text="@string/get_otp"
                            android:textColor="@color/white" />
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center"
                        android:text="@string/mobile_no_is_only_used_for_verification_purpose"
                        android:textColor="@color/colorThree" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/otp"
                        android:textColor="@color/colorThree"
                        android:textSize="@dimen/text_regular" />


                    <EditText
                        android:id="@+id/etOTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_otp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:minHeight="50dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/colorThree"
                        android:textColorHint="@color/colorLightGray" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llUserDetailsForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/name"
                            android:textColor="@color/colorThree"
                            android:textSize="@dimen/text_regular" />

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/enter_your_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:minHeight="50dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorThree"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="@dimen/text_regular" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/email"
                            android:textColor="@color/colorThree"
                            android:textSize="@dimen/text_regular" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/enter_your_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:minHeight="50dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorThree"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="@dimen/text_regular" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textColor="@color/colorThree"
                            android:textSize="@dimen/text_regular" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/enter_your_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:minHeight="50dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorThree"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="@dimen/text_regular" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm_password"
                            android:textColor="@color/colorThree"
                            android:textSize="@dimen/text_regular" />

                        <EditText
                            android:id="@+id/etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/enter_your_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:minHeight="50dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorThree"
                            android:textColorHint="@color/colorLightGray"
                            android:textSize="@dimen/text_regular" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvAgreementText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-5dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_regular" />

                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="70dp"
                        android:background="@drawable/bg_button_primary"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAlreadyHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorThree"
            android:textSize="@dimen/text_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/login"
            android:textColor="@color/colorOne"
            android:textSize="@dimen/text_regular"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>