<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorOne"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_navigation_back"
                app:tint="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/colorThree"
                        android:textSize="@dimen/text_regular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDOB"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorTransparent" />

                        <ImageButton
                            android:id="@+id/ivCalender"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/colorTransparent"
                            android:src="@drawable/ic_drop_down" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/gender"
                        android:textColor="@color/colorThree"
                        android:textSize="@dimen/text_regular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinnerGender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorTransparent"
                            android:theme="@style/SpinnerTheme" />

                        <ImageButton
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/colorTransparent"
                            android:src="@drawable/ic_drop_down" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alternate contact"
                        android:textSize="@dimen/text_regular"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorThree" />

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/enter_mobile_number"
                        android:paddingStart="10dp"
                        android:textSize="@dimen/text_regular"
                        android:paddingEnd="10dp"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorThree"
                        android:textColorHint="@color/colorLightGray"
                        android:background="@drawable/bg_edittext"/>

                </LinearLayout>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</RelativeLayout>